--- a/gui/MainWindows.ui
+++ b/gui/MainWindows.ui
@@ -33,7 +33,7 @@
        <enum>QTabWidget::South</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>4</number>
       </property>
       <property name="iconSize">
        <size>
@@ -102,6 +102,20 @@
        <layout class="QVBoxLayout" name="verticalLayout_7">
         <item>
          <widget class="CommandWindows" name="widget_3" native="true"/>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tab_5">
+       <attribute name="title">
+        <string>Script</string>
+       </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_8">
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout_4">
+          <item>
+           <widget class="ScriptWindows" name="widget_4" native="true"/>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
@@ -191,6 +205,12 @@
    <class>CommandWindows</class>
    <extends>QWidget</extends>
    <header>gui/commandwindows.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ScriptWindows</class>
+   <extends>QWidget</extends>
+   <header>gui/scriptwindows.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
