--- a/gui/ConsoleWindows.ui
+++ b/gui/ConsoleWindows.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <widget class="QTextBrowser" name="textBrowser"/>
+    <widget class="QPlainTextEdit" name="textBrowser"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
