--- a/gui/ConsoleWindows.ui
+++ b/gui/ConsoleWindows.ui
@@ -15,7 +15,11 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <widget class="QPlainTextEdit" name="textBrowser"/>
+    <widget class="QPlainTextEdit" name="textBrowser">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
