--- a/pydevtoolplatform/qtdesign/mainview.ui
+++ b/pydevtoolplatform/qtdesign/mainview.ui
@@ -17,8 +17,11 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QTabWidget" name="tabWidget">
+      <property name="tabShape">
+       <enum>QTabWidget::Triangular</enum>
+      </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="TestView" name="tab">
        <attribute name="title">
@@ -28,6 +31,11 @@
       <widget class="SourceView" name="tab_2">
        <attribute name="title">
         <string>SCRIPT EDIT</string>
+       </attribute>
+      </widget>
+      <widget class="ExampleView" name="tab_3">
+       <attribute name="title">
+        <string>EXAMPLE</string>
        </attribute>
       </widget>
      </widget>
@@ -43,9 +51,18 @@
      <height>26</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QDockWidget" name="dockWidget_2">
+   <property name="windowTitle">
+    <string>Console</string>
+   </property>
    <attribute name="dockWidgetArea">
     <number>8</number>
    </attribute>
@@ -69,6 +86,12 @@
    <class>TestView</class>
    <extends>QWidget</extends>
    <header>qtcode/testview.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ExampleView</class>
+   <extends>QWidget</extends>
+   <header>qtcode/exampleview.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
