[pytool] version check

--- a/pydevtoolplatform/smalltools/copytool.ui
+++ b/pydevtoolplatform/smalltools/copytool.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>503</width>
-    <height>337</height>
+    <height>405</height>
    </rect>
   </property>
   <property name="font">
@@ -21,8 +21,29 @@
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="2" column="1">
-      <widget class="QListWidget" name="listWidget"/>
+     <item row="3" column="2">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QPushButton" name="pushButton_3">
+         <property name="text">
+          <string>Load</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
@@ -43,8 +64,11 @@
      <item row="0" column="1">
       <widget class="QLineEdit" name="lineEdit"/>
      </item>
-     <item row="0" column="2">
-      <widget class="QPushButton" name="pushButton">
+     <item row="3" column="1">
+      <widget class="QListWidget" name="listWidget"/>
+     </item>
+     <item row="1" column="2">
+      <widget class="QPushButton" name="pushButton_2">
        <property name="text">
         <string>Set Dir</string>
        </property>
@@ -69,14 +93,14 @@
      <item row="1" column="1">
       <widget class="QLineEdit" name="lineEdit_2"/>
      </item>
-     <item row="1" column="2">
-      <widget class="QPushButton" name="pushButton_2">
+     <item row="0" column="2">
+      <widget class="QPushButton" name="pushButton">
        <property name="text">
         <string>Set Dir</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
+     <item row="3" column="0">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QLabel" name="label_3">
@@ -109,29 +133,41 @@
        </item>
       </layout>
      </item>
+     <item row="2" column="1">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>00.00.00</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+       </property>
+       <property name="textInteractionFlags">
+        <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Version</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
      <item row="2" column="2">
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item>
-        <widget class="QPushButton" name="pushButton_3">
-         <property name="text">
-          <string>Load</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="verticalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
+      <widget class="QPushButton" name="pushButton_6">
+       <property name="text">
+        <string>Check</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
