--- a/pydevtoolplatform/lib/HtmlTestRunner/template/report_template.html
+++ b/pydevtoolplatform/lib/HtmlTestRunner/template/report_template.html
@@ -11,6 +11,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <h2 class="text-capitalize">{{ title }}</h2>
+                <p class='attribute'><strong>Author: </strong>{{ Author }}</p>
+                <p class='attribute'><strong>Windows: </strong>{{ Windows }}</p>
+                <p class='attribute'><strong>Processor: </strong>{{ Processor }}</p>                
                 <p class='attribute'><strong>Start Time: </strong>{{ header_info.start_time.strftime("%Y-%m-%d %H:%M:%S") }}</p>
                 <p class='attribute'><strong>Duration: </strong>{{ header_info.status.duration }}</p>
                 <p class='attribute'><strong>Summary: </strong>Total: {{ header_info.status.total }}, Pass: {{ header_info.status.success }}{% if header_info.status.failure %}, Fail: {{ header_info.status.failure }}{% endif %}{% if header_info.status.error %}, Error: {{ header_info.status.error }}{% endif %}{% if header_info.status.skip %}, Skip: {{ header_info.status.skip }}{% endif %}</p>
